<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_home"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/menu_bike_track"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_bike_track"/>

        <item
            android:id="@+id/menu_poi_share"
            android:icon="@drawable/main_search"
            android:title="@string/menu_poi_share"/>

        <item
            android:id="@+id/menu_poi_book"
            android:icon="@drawable/main_catalog"
            android:title="@string/menu_poi_book"/>

        <item
            android:id="@+id/menu_report"
            android:icon="@drawable/main_condition"
            android:title="@string/menu_report"/>

        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/main_favor"
            android:title="@string/menu_favorite"/>

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/main_set"
            android:title="@string/menu_settings"/>

    </group>

</menu>