<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#53d769" >

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="@string/title_view_back_pressed"
            android:text="@string/title_view_back"
            android:textColor="#61a2f7"
            android:typeface="sans"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/byking_function_TrackDownLoad_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="sans" />

        <Button
            android:id="@+id/button20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="@string/title_view_confirm_pressed"
            android:text="@string/title_view_confirm"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="#61a2f7"
            android:typeface="sans"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dip5"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/keyword_search"
            android:imeOptions="actionDone" />

        <Button
            android:id="@+id/button1"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:background="@drawable/layer_selection_ic_search" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:scrollbars="none" />

</LinearLayout>