<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#53d769" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="@string/title_view_back_pressed"
            android:text="@string/title_view_back"
            android:textColor="#61a2f7"
            android:typeface="sans"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/preference_pref"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="sans" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="@string/title_view_confirm_pressed"
            android:text="@string/title_view_confirm"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="#61a2f7"
            android:typeface="sans"
            android:visibility="invisible" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:layout_marginTop="@dimen/dip5"
        android:drawSelectorOnTop="false"
        android:listSelector="@android:color/transparent"
        android:numColumns="2"
        android:verticalSpacing="@dimen/dip10" >
    </GridView>

</RelativeLayout>